Add loader and clean up the code
Add loader and clean up the code

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "ng-bootstrap": "^1.6.3",
     "ng-bs-daterangepicker": "0.0.3",
     "ngx-bootstrap": "^2.0.3",
+    "ngx-spinner": "^6.0.0",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
